fix cart number overlap on small screens

--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -47,6 +47,13 @@
   background: -webkit-linear-gradient(0deg, transparent 50%, yellow 50%);
   background-size: 400px 80px;
 
+  @media only screen and (max-width: 500px) {
+    scale: 0.95;
+    & .cartSvg {
+      margin-left: -110%;
+    }
+  }
+
 }
 
 .linkBtn:hover {
